--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -9,8 +9,17 @@
     "go": "nodemon server.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "nodemon": "^1.18.7"
+    "disconnect": "^1.2.2",
+    "dotenv": "^10.0.0",
+    "knex": "^0.95.10",
+    "musixmatch": "^0.1.6",
+    "nodemon": "^1.18.7",
+    "pg": "^8.7.1",
+    "spotify-web-api-node": "^5.0.2",
+    "youtube-api": "^3.0.1"
+  },
+  "devDependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
