--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
+    "dotenv": "^10.0.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.2.1",
+    "react-scripts": "2.1.8",
+    "vue": "^2.6.14"
   },
   "scripts": {
     "start": "react-scripts start",
