--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
