--- a/express-back-end/package.json
+++ b/express-back-end/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "genius-lyrics-api": "^3.2.0",
     "knex": "^0.95.10",
+    "last-fm": "^5.3.0",
     "musixmatch": "^0.1.6",
     "nodemon": "^1.18.7",
     "pg": "^8.7.1",
