--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -12,7 +12,11 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.2.1",
     "react-scripts": "2.1.8",
-    "vue": "^2.6.14"
+    "styled-components": "^5.3.3",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
