--- a/react-front-end/package.json
+++ b/react-front-end/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "dotenv": "^10.0.0",
@@ -13,10 +16,10 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "2.1.8",
     "styled-components": "^5.3.3",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@mui/material": "^5.0.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webfontloader": "^1.6.28",
+    "wikipedia": "^1.1.6",
+    "youtube-search": "^1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
